--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -347,6 +347,83 @@
 			font-size: var(--font-ui-smaller);
 		}
 	}
+
+	// Local REST API settings - Card style with visual hierarchy
+	#local-rest-api-section {
+		h3 {
+			margin: 0 0 0.25rem 0;
+			font-size: 1rem;
+			font-weight: 600;
+		}
+
+		.local-rest-api-card {
+			margin-top: 1rem;
+			margin-left: 0;
+			padding: 1.25rem;
+			background-color: var(--background-secondary);
+			border-radius: 8px;
+			border: 1px solid var(--background-modifier-border);
+
+			.setting-item {
+				padding: 0.75rem 0;
+				border-bottom: none;
+
+				&:first-child {
+					padding-top: 0;
+				}
+
+				&:last-child {
+					padding-bottom: 0;
+				}
+
+				&:not(:last-child) {
+					border-bottom: 1px solid var(--background-modifier-border);
+				}
+
+				.setting-item-info {
+					flex-grow: 1;
+
+					label {
+						font-weight: 500;
+						font-size: 0.9375rem;
+						display: block;
+						margin-bottom: 0.25rem;
+					}
+
+					.setting-item-description {
+						margin-top: 0.25rem;
+						font-size: 0.875rem;
+						color: var(--text-muted);
+					}
+				}
+
+				.setting-item-control {
+					input[type="text"],
+					input[type="password"] {
+						margin-top: 0.5rem;
+						width: 100%;
+					}
+				}
+
+				&.mod-horizontal {
+					display: flex;
+					align-items: center;
+
+					.setting-item-control {
+						flex-shrink: 0;
+						margin-left: 1rem;
+
+						input[type="text"],
+						input[type="password"] {
+							margin-top: 0;
+							width: auto;
+							min-width: 200px;
+						}
+					}
+				}
+			}
+		}
+	}
 }
 
 .is-firefox-mobile,
